Fix scaling issue for embedded videos on mobile devices

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1198,3 +1198,28 @@ h4.panel-title {
         display:block !important;
     }
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-container-wrapper {
+    max-width: 100%;
+    width: 560px;
+    left: 0;
+    right:0;
+    margin:auto;
+}
